Size/position tweak to footer links on Firefox 9 whatsnew page (Bug 698850)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@98975 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/firefox/9/whatsnew-page.css
+++ b/style/firefox/9/whatsnew-page.css
@@ -96,7 +96,7 @@ header#feature p a {
 
 #sub-features {
     padding: 10px 15px 25px 15px;
-    margin: 30px;
+    margin: 30px 30px 20px 30px;
     border: 1px solid #c9ddf2;
     -moz-box-shadow: 0 2px rgba(0, 0, 0, 0.05), 0 -2px rgba(0, 0, 0, 0.05) inset;
     -webkit-box-shadow: 0 2px rgba(0, 0, 0, 0.05), 0 -2px rgba(0, 0, 0, 0.05) inset;
@@ -121,7 +121,7 @@ header#feature p a {
     clear: both;
     text-align: center;
     color: #ccc;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .footer-links .footer-privacy {
